--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.2",
-    "notistack": "^3.0.1"
+    "notistack": "^3.0.1",
+    "zod": "^3.23.8"
   }
 }
